--- a/src/app/componentes/pantallas/gestionar-usuario/gestionar-usuario.component.html
+++ b/src/app/componentes/pantallas/gestionar-usuario/gestionar-usuario.component.html
@@ -12,8 +12,8 @@
       </div><!--end col-->
       <div class="col">
           <div class="p-2">
-              <h3 class="text-white mb-1">{{Lista?.nombre}}</h3>
-              <p class="text-white-75">Administrador</p>
+              <h3 class="text-white mb-1">{{clienteLogueado?.nombre}}</h3>
+              <p class="text-white-75">{{clienteLogueado?.usuario?.perfil?.nombre}}</p>
               <div class="hstack text-white-50 gap-1">
                   <div class="me-2"><i class="ri-map-pin-user-line me-1 text-white-75 fs-16 align-middle"></i>Córdoba, Argentina</div>
               </div>
@@ -40,15 +40,15 @@
                             <tbody>
                                 <tr>
                                     <th class="ps-0" scope="row">Nombre y Apellido:</th>
-                                    <td class="text-muted">{{Lista?.nombre}} {{Lista?.nombre}}</td>
+                                    <td class="text-muted">{{clienteLogueado?.nombre}} {{clienteLogueado?.apellido}}</td>
                                 </tr>
                                 <tr>
                                     <th class="ps-0" scope="row">Teléfono:</th>
-                                    <td class="text-muted">+(1) 987 6543</td>
+                                    <td class="text-muted">{{clienteLogueado?.telefono}}</td>
                                 </tr>
                                 <tr>
                                     <th class="ps-0" scope="row">E-mail:</th>
-                                    <td class="text-muted">{{Lista?.email}}</td>
+                                    <td class="text-muted">{{clienteLogueado?.email}}</td>
                                 </tr>
                             </tbody>
                         </table>
