--- a/src/app/componentes/account/login/login.component.html
+++ b/src/app/componentes/account/login/login.component.html
@@ -37,7 +37,7 @@
                                 <p class="text-muted">Inicia sesión para ingresar a Win.</p>
                             </div>
                             <div class="p-2 mt-4">
-                                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                                <form [formGroup]="loginForm">
   
                                     <div class="mb-3">
                                       <label class="form-label" for="username">Email</label>
@@ -73,7 +73,7 @@
                                     </div>
   
                                     <div class="mt-4">
-                                        <button class="btn btn-primary w-100" type="submit">Iniciar Sesión</button>
+                                        <button class="btn btn-primary w-100" (click)="login()">Iniciar Sesión</button>
                                     </div>
                                 </form>
                             </div>
