--- a/src/app/componentes/layout/topbar/topbar.component.html
+++ b/src/app/componentes/layout/topbar/topbar.component.html
@@ -76,14 +76,14 @@
                             <img class="rounded-circle header-profile-user" src="assets/images-win/perfil-foto.png"
                                 alt="Header Avatar">
                             <span class="text-start ms-xl-2">
-                                <span class="d-none d-xl-inline-block ms-1 fw-medium user-name-text">Tomás García</span>
-                                <span class="d-none d-xl-block ms-1 fs-12 text-muted user-name-sub-text">Administrador</span>
+                                <span class="d-none d-xl-inline-block ms-1 fw-medium user-name-text">{{clienteLogueado?.nombre}} {{clienteLogueado?.apellido}}</span>
+                                <span class="d-none d-xl-block ms-1 fs-12 text-muted user-name-sub-text">{{clienteLogueado?.usuario?.perfil?.nombre}}</span>
                             </span>
                         </span>
                     </button>
                     <div class="dropdown-menu dropdown-menu-end" ngbDropdownMenu>
                         <!-- item-->
-                        <h6 class="dropdown-header">Bienvenido Tomás!</h6>
+                        <h6 class="dropdown-header">Bienvenido {{clienteLogueado?.nombre}} !</h6>
                         <a class="dropdown-item" routerLink="/ag/perfil"><i
                                 class="mdi mdi-account-circle text-muted fs-16 align-middle me-1"></i> <span
                                 class="align-middle">Perfil</span></a>
