--- a/src/app/componentes/pantallas/gestion-de-canchas/gestion-de-canchas.component.scss
+++ b/src/app/componentes/pantallas/gestion-de-canchas/gestion-de-canchas.component.scss
@@ -3,7 +3,7 @@
 // }
 
 .card{
-  padding: 5%;
+  padding: 5% 5% 0 5%;
 }
 
 .nroCancha{
@@ -39,60 +39,10 @@
 
 }
 
-/* button {
-    padding: 1.3em 3em;
-    font-size: 12px;
-    text-transform: uppercase;
-    letter-spacing: 2.5px;
-    font-weight: 500;
-    color: #000;
-    background-color: #fff;
-    border: none;
-    border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
-    border: 1px solid black;
-  }
-  
-  button:hover {
-    background-color: #23c483;
-    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
-    color: #fff;
-    transform: translateY(-7px);
-    border: none;
-  }
-  
-  button:active {
-    transform: translateY(-1px);
-  }
+.paginacion{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
 
-.btnEliminar {
-    padding: 1.3em 3em;
-    font-size: 12px;
-    text-transform: uppercase;
-    letter-spacing: 2.5px;
-    font-weight: 500;
-    color: #000;
-    background-color: #fff;
-    border: none;
-    border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
-    border: 1px solid black;
-  }
-  
-.btnEliminar:hover {
-    background-color: #c42323;
-    box-shadow: 0px 15px 20px rgba(229, 46, 46, 0.4);
-    color: #fff;
-    transform: translateY(-7px);
-    border: none;
-  }
-  
-.btnEliminar:active {
-    transform: translateY(-1px);
-  } */
